k8s-ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guest-home-rules
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: letsencrypt
spec:
  rules:
  ## change for your domain
    - host: guest.home.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
  tls:
  - hosts:
  ## change for your domain
    - guest.home.domain.com
    secretName: guest-home-tls
